2005-08-03  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Implem/ReflectionReader.cs
	  Mono.Cecil.Implem/AggressiveReflectionReader.cs
	  Mono.Cecil.Implem/LazyReflectionReader.cs
	  Mono.Cecil.Implem/CodeReader.cs:
		Modify and add helpers to avoid lots of casts.
		Correct a bug in custom attributes attribution.

2005-08-02  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Signatures/TypeSpec.cs:
		Don't restrain the SigType
	* Mono.Cecil.Implem/AggressiveReflectionReader.cs:
		Set PInvokeInfos on the correct method

2005-07-30  Jb Evain  <jbevain@gmail.com>

	* CodeGen/cecil-gen.rb
	  CodeGen/cecil-gen-sources.rb:
		make them executable
	* CodeGen/cecil-gen-types: style
	* CodeGen/templates/ImageWriter.cs
	  Mono.Cecil.Binary/ImageWriter.cs:
		Prelimimary work on assembly writing

2005-07-29  Jb Evain  <jbevain@gmail.com>

	* CodeGen/cecil-gen-types.rb
	  CodeGen/templates/MetadataTableWriter.cs
	  CodeGen/templates/MetadataRowWriter.cs
	  Mono.Cecil/AssemblyFactory.cs
	  Mono.Cecil.Metadata/MetadataTableWriter.cs
	  Mono.Cecil.Metadata/MetadataRowWriter.cs
	  Mono.Cecil.Implem/StructureWriter.cs
	  Mono.Cecil.Implem/ReflectionWriter.cs:
		Preliminary work on assembly writing

2005-07-28  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/AssemblyFactory.cs
	  Mono.Cecil.Implem/StructureWriter.cs
		Preliminary work on assembly writing

	* Mono.Cecil/IMetadataTokenProvider.cs
	  Mono.Cecil/IMember.cs
	  Mono.Cecil/IParameter.cs:
		Add a MetadataToken property on searchable items
	* Mono.Cecil.Metadata/MetadataToken.cs:
		Add a factory method to create token from row number
	* Mono.Cecil.Implem/TypeReference.cs
	  Mono.Cecil.Implem/MemberReference.cs
	  Mono.Cecil.Implem/ParameterDefinition.cs:
		Implement the token property
	* Mono.Cecil.Implem/ReflectionReader.cs
	  Mono.Cecil.Implem/AggressiveReflectionReader.cs
	  Mono.Cecil.Implem/LazyReflectionReader.cs:
		Set the token property on reading
	* Mono.Cecil/IModuleDefinition.cs
	  Mono.Cecil.Implem/ModuleDefinition.cs