@@ -2,6 +2,8 @@
 ./Mono.Cecil/AssemblyFlags.cs
 ./Mono.Cecil/AssemblyHashAlgorithm.cs
 ./Mono.Cecil/AssemblyInfo.cs
+./Mono.Cecil/BaseReflectionVisitor.cs
+./Mono.Cecil/BaseStructureVisitor.cs
 ./Mono.Cecil/EventAttributes.cs
 ./Mono.Cecil/FieldAttributes.cs
 ./Mono.Cecil/FileAttributes.cs
@@ -198,6 +200,7 @@
 ./Mono.Cecil.Implem/AssemblyLinkedResource.cs
 ./Mono.Cecil.Implem/AssemblyName.cs
 ./Mono.Cecil.Implem/AssemblyNameReferenceCollection.cs
+./Mono.Cecil.Implem/BaseReflectionReader.cs
 ./Mono.Cecil.Implem/CilEmitter.cs
 ./Mono.Cecil.Implem/CodeReader.cs
 ./Mono.Cecil.Implem/CodeWriter.cs
